Fixed scheme name in travis ci file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c
 before_install:
     - brew update
     - brew instal xctool
-script: xctool -project ACMECrypt/ACMECryot.xcodeproj -scheme ACMEAssymTests
+script: xctool -project ACMECrypt/ACMECryot.xcodeproj -scheme AMCEAssymTests
