More travis stuff. Again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: objective-c
-script: xctool test -project ACMECrypt/ACMECrypt.xcodeproj -scheme AMCEAssymTests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script: xctool test -project ACMECrypt/ACMECrypt.xcodeproj -scheme AMCEAssymTests -sdk iphonesimulator
