--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
-xcode_project: ACMECrypt/ACMECrypt.xcodeproj
-xcode_scheme: AMCEAssymTests
+script:
+    - xcodebuild test -project ACMECrypt/ACMECrypt.xcodeproj -scheme AMCEAssymTests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
