Sign and verify functions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,5 @@ language: objective-c
 before_script:
     - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-    - xcodebuild test -project ACMECrypt/ACMECrypt.xcodeproj -scheme AMCEAssymTests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c && exit ${PIPESTATUS[0]}
-
+    - xcodebuild clean test -project ACMECrypt/ACMECrypt.xcodeproj -scheme AMCEAssymTests -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c && exit ${PIPESTATUS[0]}
 
