--- a/ACMECrypt/ACMECrypt.xcodeproj/xcshareddata/xcschemes/AMCEAssymTests.xcscheme
+++ b/ACMECrypt/ACMECrypt.xcodeproj/xcshareddata/xcschemes/AMCEAssymTests.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "51E2B63017F3C2D900E382D0"
+               BuildableName = "AMCEAssymTests.xctest"
+               BlueprintName = "AMCEAssymTests"
+               ReferencedContainer = "container:ACMECrypt.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
@@ -37,6 +53,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "51E2B63017F3C2D900E382D0"
+            BuildableName = "AMCEAssymTests.xctest"
+            BlueprintName = "AMCEAssymTests"
+            ReferencedContainer = "container:ACMECrypt.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -46,6 +71,15 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "51E2B63017F3C2D900E382D0"
+            BuildableName = "AMCEAssymTests.xctest"
+            BlueprintName = "AMCEAssymTests"
+            ReferencedContainer = "container:ACMECrypt.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
